@@ -267,6 +267,7 @@ typedef struct _Edje_Image_Directory                 Edje_Image_Directory;
 typedef struct _Edje_Image_Directory_Entry           Edje_Image_Directory_Entry;
 typedef struct _Edje_Image_Directory_Set             Edje_Image_Directory_Set;
 typedef struct _Edje_Image_Directory_Set_Entry       Edje_Image_Directory_Set_Entry;
+typedef struct _Edje_Limit                           Edje_Limit;
 typedef struct _Edje_Program                         Edje_Program;
 typedef struct _Edje_Program_Target                  Edje_Program_Target;
 typedef struct _Edje_Program_After                   Edje_Program_After;
@@ -576,6 +577,13 @@ struct _Edje_Program_After /* the action to run after another action */
 };
 
 /*----------*/
+struct _Edje_Limit
+{
+   const char *name;
+   int value;
+};
+
+/*----------*/
 #define PART_TYPE_FIELDS(TYPE)    \
       TYPE      RECTANGLE;        \
       TYPE      TEXT;             \
@@ -656,6 +664,14 @@ struct _Edje_Part_Collection
       Edje_Program **nocmp; /* Empty signal/source that will never match */
       unsigned int nocmp_count;
    } programs;
+
+   struct { /* list of limit that need to be monitored */
+      Edje_Limit **vertical;
+      unsigned int vertical_count;
+
+      Edje_Limit **horizontal;
+      unsigned int horizontal_count;
+   } limits;
 
    Edje_Part **parts; /* an array of Edje_Part */
    unsigned int parts_count;
@@ -1005,6 +1021,7 @@ struct _Edje
    Eina_List            *subobjs;
    Eina_List            *text_insert_filter_callbacks;
    void                 *script_only_data;
+
    int                   table_programs_size;
    unsigned int          table_parts_size;
 
@@ -1037,11 +1054,20 @@ struct _Edje
       void                    *data;
       int                      num;
    } message;
-   int                      processing_messages;
+   int                   processing_messages;
 
    int                   state;
 
    int			 preload_count;
+
+   lua_State            *L;
+   Eina_Inlist          *lua_objs;
+   int                   lua_ref;
+
+   struct {
+      Edje_Item_Provider_Cb  func;
+      void                  *data;
+   } item_provider;
 
    unsigned int          dirty : 1;
    unsigned int          recalc : 1;
@@ -1064,15 +1090,6 @@ struct _Edje
    unsigned int          all_part_change : 1;
 #endif
    unsigned int          have_mapped_part : 1;
-
-   lua_State            *L;
-   Eina_Inlist          *lua_objs;
-   int                   lua_ref;
-   
-   struct {
-      Edje_Item_Provider_Cb  func;
-      void                  *data;
-   } item_provider;
 };
 
 struct _Edje_Calc_Params
