@@ -135,7 +135,7 @@
         * Add entry,selection,all,request for signalling ctrl+a in an entry
         * Add entry,selection,none,request for signalling ctrl+shift+a in an entry
         * Fix entry,paste,request* to be emitted after cursor,changed (fixes middle mouse paste location)
-        
+
 2011-05-27  Carsten Haitzler (The Rasterman)
 
 	* Fix edje_shutdown() being called before all evas objects created
@@ -146,3 +146,10 @@
 
 	* Entry: Added changed,user signal. This signal indicates the entry
 	has changed because of user interaction, i.e not by code.
+
+2011-08-22  Cedric Bail
+
+	* Add collection.group.limits {
+	          vertical: "name" value;
+	          horizontal: "name" value;
+	      }.
